Login and Register

--- a/nav.html
+++ b/nav.html
@@ -14,8 +14,8 @@
       <li><a id="active" href="#">Home</a></li>
       <li><a href="#">Criminal Records</a></li>
       <li><a href="#">Jail Map</a></li>
-      <li style="float:right"><a href="#">Login</a></li>
-      <li style="float:right"><a href="#">Register</a></li>
+      <li style="float:right"><a href="login.html">Login</a></li>
+      <li style="float:right"><a href="register.html">Register</a></li>
     </ul>
   </div>
 
