--- a/searched.html
+++ b/searched.html
@@ -8,27 +8,23 @@
 	<body>
 		<div class="navbar">
     	<ul>
-      	<li><a href="#">Home</a></li>
+      	<li><a href="nav.html">Home</a></li>
      	 <li><a href="#" id="active">Criminal Records</a></li>
       	<li><a href="#">Jail Map</a></li>
-      	<li style="float:right"><a href="#">Login</a></li>
-      	<li style="float:right"><a href="#">Register</a></li>
+      	<li style="float:right"><a href="login.html">Login</a></li>
+      	<li style="float:right"><a href="register.html">Register</a></li>
     	</ul>
   	</div>
   	<div class="result">
   		<table>
   			<thead>
-  				<th>Mugshot: </th>
+  				<th>Donald Trump</th>
   				<th><img src="dtrump.jpg" id="image"></th>
   			</thead>
   			<tbody>
   				<tr>
   					<td>ID: </td>
   					<td>ABC123</td>
-  				</tr>
-  				<tr>
-  					<td>Name: </td>
-  					<td>Donald Trump</td>
   				</tr>
   				<tr>
   					<td>Age: </td>
@@ -39,7 +35,7 @@
   					<td>Male</td>
   				</tr>
   				<tr>
-  					<td>Biometric Details: </td>
+  					<td>Biometric Details </td>
   					<td>ABC123</td>
   				</tr>
   				<tr>
