Login and Registration page background

--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     	</ul>
   		</div>
   		<div class="bdy">
-		<h1>C-Dex Registration</h1>
+		<h1 id="cd">C-Dex Registration</h1>
 		<form id="name">
 			<div>
 				<span class="fn">First Name : </span> <input type="text" name="fname">
