--- a/searched.html
+++ b/searched.html
@@ -35,7 +35,12 @@
   					<td>Male</td>
   				</tr>
   				<tr>
-  					<td>Biometric Details </td>
+  				<tr>
+  					<td>Fingerprint: </td>
+  					<td>ABC123</td>
+  				</tr>
+  				<tr>
+  					<td>Iris Scan: </td>
   					<td>ABC123</td>
   				</tr>
   				<tr>
