--- a/nav.html
+++ b/nav.html
@@ -27,7 +27,7 @@
 
   <div class="find">
     <form>
-      <input type="text" name="search" placeholder="Search..">
+      <input type="text" id="search" name="search" placeholder="Search..">
     </form>
     <form method="get" action="searched.html">
    	 <button class="button">C - Dex Search</button>
