--- a/register.html
+++ b/register.html
@@ -16,8 +16,8 @@
     	</ul>
   		</div>
   		<div class="bdy">
-		<h1 id="cd">C-Dex Registration</h1>
-		<form id="name">
+		<h1>C-Dex Registration</h1>
+		<form id="name" method="post">
 			<div>
 				<span class="fn">First Name : </span> <input type="text" name="fname">
 			</div>
