--- a/enterRecord.html
+++ b/enterRecord.html
@@ -26,7 +26,7 @@
     <p id="dex">Dex</p>
     <p id="rime-in">: New Record</p>
   </div>
-  <div class="newRecord">
+  <div class="newRecord" id="pg1">
     <form>
     <span>
     	<span class="ipname" id="nme">Name: </span>
@@ -56,7 +56,7 @@
       	<span class="ipname" id="pcode">Pincode: </span>
       	<input id="cname" type="text" name="Pincode" placeholder="Pincode">
       	</div>
-         <div>
+         <div id="pg2">
       <p class="img" id="im">Image: </p>
       <label for="browse">
       <label id="click">Click to upload</label>
@@ -64,7 +64,7 @@
       </label>
       <input id="browse" type="file" name="browseImage" onchange="previewFile()">
     </div>
-    <button type="submit" id="bttn" id="bttn">Submit</button>
+    <button type="submit" id="bttn" >Next Page</button>
     </form>
   </div>
 </div>
