--- a/nav.html
+++ b/nav.html
@@ -14,8 +14,8 @@
       <li><a id="active" href="#">Home</a></li>
       <li><a href="#">Criminal Records</a></li>
       <li><a href="#">Jail Map</a></li>
-      <li style="float:right"><a href="login.html">Login</a></li>
-      <li style="float:right"><a href="register.html">Register</a></li>
+      <li style="float:right"><a href="log.html">Login</a></li>
+      <li style="float:right"><a href="reg.html">Register</a></li>
     </ul>
   </div>
 
@@ -27,9 +27,9 @@
 
   <div class="find">
     <form>
-      <input type="text" id="search" name="search" placeholder="Search..">
+      <input type="text" class="search" name="search" placeholder="Search..">
     </form>
-    <form method="get" action="searched.html">
+    <form method="get" action="searched.php">
    	 <button class="button">C - Dex Search</button>
     </form>
   </div>
