enterRecord second page

--- a/enterRecord.html
+++ b/enterRecord.html
@@ -56,7 +56,6 @@
       	<span class="ipname" id="pcode">Pincode: </span>
       	<input id="cname" type="text" name="Pincode" placeholder="Pincode">
       	</div>
-         <div id="pg2">
       <p class="img" id="im">Image: </p>
       <label for="browse">
       <label id="click">Click to upload</label>
@@ -64,7 +63,7 @@
       </label>
       <input id="browse" type="file" name="browseImage" onchange="previewFile()">
     </div>
-    <button type="submit" id="bttn" >Next Page</button>
+    <a href="enterRecord2.html"><button type="submit" id="bttn" >Next Page</button></a>
     </form>
   </div>
 </div>
